# alc-lisp

./: Cargo.toml  Makefile  clippy.toml  test.txt  test_2.txt  test_3.txt  test_4.txt  test_5.txt  test_6.alc
.cargo/: config.toml
alc-lisp-wasm/: Cargo.toml  build.rs
alc-lisp-wasm/src/: builtins.rs  function_container.rs  lib.rs
examples/: concat_test.alc  fib.alc  fib_list_concat.alc  fib_list_flat.alc  flat_test.alc  hello_string_concat.alc  hello_world.alc  map_test.alc  node_types.alc  reduce_sum_test.alc  reduce_test.alc  sleep_test.alc  split_test.alc  test.alc
examples/advent of code 2024/: 01.alc
examples/benchs/: fib_list_concat.alc  fib_list_concat_clean.alc  fib_list_flat.alc  fib_nth.alc  list_of_numbers.alc  list_of_numbers_redef.alc
examples/benchs/ast/: strings.alc
examples/benchs/lexer/: just_a_lot_of_whitespace.alc  numbers.alc  strings.alc
examples/tests/: add_many.alc  add_two.alc  last_value_do.alc  last_value_function.alc  many_parens.alc  recursive_nth_fib.alc  reduce_list.alc  return_last_value.alc  sub_two.alc
src/: bench.rs  lib.rs  main.rs  native.rs  test.rs
src/ast/: macros.rs  mod.rs  node.rs
src/interpreter/: builtins.rs  constants.rs  mod.rs
src/interpreter/builtins/: errors.rs  list.rs  mod.rs  native.rs  number.rs  string.rs
src/interpreter/objects/: mod.rs  wasm.rs
src/lexer/: mod.rs  token.rs
src/repl/: mod.rs
src/utils/: timer.rs
web/: .prettierrc.mjs  README.md  astro.config.mjs  package.json  pnpm-lock.yaml  vite.config.ts
web/src/: App.tsx  main.tsx
web/src/assets/: hello_world.alc
web/src/components/: Header.tsx  Home.tsx  counter.tsx
web/src/hooks/: useAlcLisp.ts
web/src/pages/: App.tsx  Home.tsx  index.astro
web/src/stores/: playground.store.ts
web/src/utils/: format.ts
