[package]
name = "alc-lisp"
version = "0.1.0"
edition = "2021"
default-run = "alc-lisp"

[dependencies]
anyhow = "1.0.93"
clap = { version = "4.5.21", features = ["derive"] }
colored = "2.1.0"
serde = { version = "1.0.216", features = ["derive"], optional = true }
ts-rs = { version = "10.1.0", optional = true }
wasm-bindgen = { version = "0.2.97", optional = true }

[features]
default = []
serde = ["dep:serde"]
ts-rs = ["dep:ts-rs", "serde"]
wasm = ["dep:wasm-bindgen", "ts-rs"]

[workspace]
members = ["alc-lisp-wasm"]
