[package]
name = "alc-lisp"
version = "0.1.0"
edition = "2021"
default-run = "alc-lisp"

[workspace]
members = ["alc-lisp-wasm"]

[workspace.dependencies]
once_cell = "1.20.2"
serde = "1.0.216"
js-sys = "0.3.74"
web-sys = "0.3.74"
wasm-bindgen = "0.2.97"
ts-rs = "10.1.0"

[profile.release]
debug = 1

[dependencies]
anyhow = "1.0.93"

clap = { version = "4.5.21", features = ["derive"], optional = true }
colored = { version = "2.1.0", optional = true }

serde = { workspace = true, features = ["derive", "rc"], optional = true }
ts-rs = { workspace = true, optional = true }
wasm-bindgen = { workspace = true, optional = true }
js-sys = { workspace = true, optional = true }
once_cell = { workspace = true }
foldhash = "0.1.3"

[features]
default = ["bin"]
bin = ["dep:clap", "dep:colored"]
serde = ["dep:serde"]
ts-rs = ["dep:ts-rs", "serde"]
wasm = ["dep:wasm-bindgen", "dep:js-sys", "ts-rs"]
