[package]
name = "alc-lisp"
version = "0.1.0"
edition = "2021"
default-run = "alc-lisp"

[workspace]
members = ["alc-lisp-wasm"]

[workspace.dependencies]
once_cell = "1.20.2"
serde = "1.0.216"
js-sys = "0.3.76"
web-sys = "0.3.76"
wasm-bindgen = "0.2.99"
ts-rs = "10.1.0"
parking_lot = { version = "0.12.3" }

[dependencies]
anyhow = "1.0.94"

clap = { version = "4.5.23", features = ["derive"], optional = true }
colored = { version = "2.2.0", optional = true }

serde = { workspace = true, features = ["derive", "rc"], optional = true }
ts-rs = { workspace = true, optional = true }
wasm-bindgen = { workspace = true, optional = true }
js-sys = { workspace = true, optional = true }
once_cell = { workspace = true }
foldhash = "0.1.3"
parking_lot = { workspace = true, features = [
    "serde",
    "nightly",
    "hardware-lock-elision",
] }

[features]
default = ["bin"]
bin = ["dep:clap", "dep:colored"]
serde = ["dep:serde"]
ts-rs = ["dep:ts-rs", "serde"]
wasm = ["dep:wasm-bindgen", "dep:js-sys", "ts-rs"]


[profile.fast]
inherits = "release"
codegen-units = 1
lto = "fat"
opt-level = 3
panic = "abort"
