[package]
name = "alc-lisp-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
alc-lisp = { path = "..", features = ["wasm", "serde"] }
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
js-sys = "0.3.74"
log = "0.4.22"
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = "0.2.97"
web-sys = { version = "0.3.74", features = ["Performance", "Window"] }

[build-dependencies]
ts-rs = { version = "10.1.0" }
alc-lisp = { path = "..", features = ["wasm", "serde"] }

[profile.release]
lto = true
