[package]
name = "wasm"
description = "WASM Version of the alc-lisp interpreter"
repository = "https://github.com/lzldev/alc-lisp"
authors = ["Lucas Costa <francisco.lucas0507@gmail.com>"]
license = "Apache-2.0"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
alc-lisp = { path = "..", default-features = false, features = [
    "wasm",
    "serde",
] }
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
gloo-utils = "0.2.0"
js-sys = { workspace = true }
log = "0.4.22"
once_cell = { workspace = true }
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = { workspace = true }
web-sys = { workspace = true, features = ["Performance", "Window"] }
parking_lot = { workspace = true }

[build-dependencies]
ts-rs = { workspace = true }
alc-lisp = { path = "..", features = ["wasm", "serde"] }

[profile.release]
lto = true
